tests/computed_race/computed_race.exp
Error ---------------------------------------------------------------- b.js:11:2

Cannot cast `o[A.FOO]` to empty because null is incompatible with empty.

Error: b.js:11
 11: (o[A.FOO]: empty); // error: null ~> empty
      ^^^^^^^^ Cannot cast `o[A.FOO]` to empty because null [1] is incompatible with empty [2].
  References:
   10: var o = {[k]: null};
                     ^^^^ [1]: null
   11: (o[A.FOO]: empty); // error: null ~> empty
                  ^^^^^ [2]: empty

Error ---------------------------------------------------------------- c.js:11:2

Cannot cast `o[k]` to empty because null is incompatible with empty.

Error: c.js:11
 11: (o[k]: empty); // error: null ~> empty
      ^^^^ Cannot cast `o[k]` to empty because null [1] is incompatible with empty [2].
  References:
    9: var o = {[A.FOO]: null};
                         ^^^^ [1]: null
   11: (o[k]: empty); // error: null ~> empty
              ^^^^^ [2]: empty


Found 2 errors
